Convert to number inputs, improve UI & logic

--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
         </h3>
         <div class="calc">
           <div class="calc-input-container">
-            <input id="input-kg" type="text" class="calc__input-kg" value="1" />
+            <input
+              id="input-kg"
+              type="number"
+              class="calc__input-kg"
+              value="1"
+            />
             <p class="calc-input--unit">kg</p>
           </div>
           <p class="calc--equal">=</p>
           <div class="calc-input-container">
             <input
               id="input-lbs"
-              type="text"
+              type="number"
               class="calc__input-lbs"
               value="2.20"
             />
